--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 <body>
 
     <div class="sidebar">
-        <nav class="sidebar_navegation">
+        <nav class="sidebar__navegation">
             <div class="logo">
                 <a href="">
                     <img src="assets/icons/logo-spotify.png" alt="logo do spotify">
                 </a>
             </div>
-                <div>
                     <ul>
                         <li>
                             <a href="">
@@ -35,8 +34,12 @@
                             </a>
                         </li>
                     </ul>
-                </div>
         </nav>
+        <div class="library">
+            <div class="library__content">
+
+            </div>
+        </div>
     </div>
     
     
