--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <link rel="stylesheet" href="/src/styles/reset.css">
     <link rel="stylesheet" href="/src/styles/vars.css">
+    <link rel="stylesheet" href="src/styles/main-content.css">
     <link rel="stylesheet" href="/src/styles/sidebar-footer.css">
+    
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alice&family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Dancing+Script:wght@400;500;600;700&family=Oranienbaum&family=Roboto:wght@100;300;400;500;700;900&display=swap" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -73,24 +75,28 @@
     <main>
         <div class="main-container">
             <nav class="header__navigation">
-                <div class=" navigation">
+                <div class="navigation">
+
                     <button class="arrow-left">
                         <img src="src/assets/icons/small-left.png" alt="seta esquerda">
                     </button>
+
                     <button class="arrow-right">
                         <img src="src/assets/icons/small-right.png" alt="seta direita">
                     </button>
 
+                </div>
+
                     <div class="header__search">
                         <img src="src/assets/icons/search.png" alt="">
-                        <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?" >
+                        <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?">
                     </div>
+            
 
                     <div class="header__login">
                         <button class="subscribe">Inscreva-se</button>
                         <button class="login">Entrar</button>
-                    </div>
-                </div>
+                    </div> 
             </nav>
         </div>
     </main>
