--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/src/styles/vars.css">
     <link rel="stylesheet" href="src/styles/main-content.css">
     <link rel="stylesheet" href="/src/styles/sidebar-footer.css">
+    <link rel="stylesheet" href="src/styles/media-queries.css">
     
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alice&family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Dancing+Script:wght@400;500;600;700&family=Oranienbaum&family=Roboto:wght@100;300;400;500;700;900&display=swap" />
@@ -100,6 +101,7 @@
             </nav>
 
             <!-- PLAYLIST -->
+
             <div class="playlist-container">
                 <div id="result-playlists">
                     <div class="playlist">
@@ -269,7 +271,7 @@
           <button type="button">Inscreva-se grátis</button>
         </div>
     </footer>
-    
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
 
