style: Atualização da aparência com componente VAR para os elementos CARDS

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <h2 class="session">Navegar por todas as seções</h2>
                     </div>
 
-                    <!-- LIST DE CARDS -->
+                    <!-- CARDS -->
                     <div class="offer__scroll-container">
                         <div class="offer__list">
                             <section class="offer__list-item">
@@ -235,6 +235,8 @@
                             </section>
                         </div>
                     </div>
+                    <!-- END CARDS -->
+
                 </div>
                 <div id="result-artist" class="hidden">
                     <div class="grid-container">
